--- a/css/index.css
+++ b/css/index.css
@@ -1,19 +1,11 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Sometype+Mono&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Abel&family=Montserrat&display=swap');
 
 body {
     margin: 0;
     padding: 0;
-}
-
-header {
-    display: flex;
-    align-content: center;
-    justify-content: center;
-    height: 100px;
-    background-color:midnightblue;
-    color: white;
-    font-family: Sometype Mono;
+    background-color:aliceblue
 }
 
 nav {
@@ -36,14 +28,23 @@ a {
 
 a:hover {
     color:darkslateblue;
-    background-color: white;
+    background-color:mintcream;
 }
 
 p {
     display: flex;
-    margin-left: auto;
-    margin-right: auto;
+    font-family: Poppins;
+    text-align: center;
+    display: flex;
+    justify-content: center;
 }
+
+#topics-list {
+    font-family: Sometype Mono;
+    margin-left: 45%;
+}
+
+/*Start of resume css*/
 
 #resume {
     display: flex;
@@ -74,6 +75,7 @@ h1 {
     display: flex;
     justify-content: center;
     font-family: Poppins;
+    background-color: white
 }
 
 .container {
@@ -114,4 +116,58 @@ input {
     outline: none;
     border-bottom: 1px solid gray;
     padding-bottom: 5px;
+}
+
+/*Work goals css*/
+
+.work-goals {
+    font-family: Poppins;
+    text-align: center;
+    justify-content: center;
+    display: flex;
+}
+
+article {
+    text-align: center;
+}
+
+.center {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    width: 30%;
+    height: 30%;
+}
+
+/*Classwork css*/
+
+.row {
+    display: flex;
+    flex-wrap: wrap;
+    padding: 0 4px;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+.column {
+    flex: 50%;
+    margin-left: 1%;
+    margin-right: 1%;
+}
+
+.column img {
+    margin-top: 8px;
+    vertical-align: middle;
+    width: 450px;
+    height: 400px;
+    padding: 10px;
+}
+
+footer {
+    background-color:gainsboro;
+    height: 70px;
+    padding-top: 10px;
+    position: fixed;
+    display: inline-block;
+    font-family: Abel;
 }
